test/scc_test/exp/semantic-errors/096.a
096.t:5:10: error: expression must have integral type